--- a/src/VideoCard.css
+++ b/src/VideoCard.css
@@ -19,3 +19,11 @@
 .videoCard > h2 {
   padding-top: 10px;
 }
+
+.videoCard__stats {
+  display: none;
+}
+
+.videoCard:hover > .videoCard__stats {
+  display: inline;
+}
